cmake_minimum_required(VERSION 3.23)
project(Exercices)

set(CMAKE_CXX_STANDARD 20)


add_executable(ex_ ex_.cpp template_H.h "ex_6/annexe.cpp" "ex_6/annexe.h")
add_executable(ex_3_08 ex_3/ex_3_08.cpp)
add_executable(ex_3_10 ex_3/ex_3_10.cpp)
add_executable(ex_3_11 ex_3/ex_3_11.cpp)
add_executable(ex_3_12 ex_3/ex_3_12.cpp)
add_executable(ex_3_15 ex_3/ex_3_15.cpp)
add_executable(ex_3_19 ex_3/ex_3_19.cpp)
add_executable(ex_3_20 ex_3/ex_3_20.cpp)
add_executable(ex_3_24 ex_3/ex_3_24.cpp)
add_executable(ex_3_26 ex_3/ex_3_26.cpp)
add_executable(ex_3_28 ex_3/ex_3_28.cpp)
add_executable(ex_3_29 ex_3/ex_3_29.cpp)
add_executable(ex_3_30 ex_3/ex_3_30.cpp)
add_executable(ex_4_03 ex_4/ex_4_03.cpp)
add_executable(ex_4_05 ex_4/ex_4_05.cpp)
add_executable(ex_4_08 ex_4/ex_4_08.cpp)
add_executable(ex_4_09 ex_4/ex_4_09.cpp)
add_executable(ex_4_10 ex_4/ex_4_10.cpp)
add_executable(ex_4_13 ex_4/ex_4_13.cpp)
add_executable(ex_4_16 ex_4/ex_4_16.cpp)

add_executable(ex_5_04 ex_5/ex_5_04.cpp)
add_executable(ex_5_05 ex_5/ex_5_05.cpp)
add_executable(ex_5_06 ex_5/ex_5_06.cpp)
add_executable(ex_5_07 ex_5/ex_5_07.cpp)
add_executable(ex_5_08 ex_5/ex_5_08.cpp)
add_executable(ex_5_09 ex_5/ex_5_09.cpp)
add_executable(ex_5_10 ex_5/ex_5_10.cpp)
add_executable(ex_5_11 ex_5/ex_5_11.cpp)
add_executable(ex_5_12 ex_5/ex_5_12.cpp)
add_executable(ex_5_13 ex_5/ex_5_13.cpp)
add_executable(ex_5_14 ex_5/ex_5_14.cpp)
add_executable(ex_5_15 ex_5/ex_5_15.cpp)
add_executable(ex_5_16 ex_5/ex_5_16.cpp)
add_executable(ex_5_17 ex_5/ex_5_17.cpp)
add_executable(ex_5_18 ex_5/ex_5_18.cpp)
add_executable(ex_5_19 ex_5/ex_5_19.cpp)
add_executable(ex_5_21 ex_5/ex_5_21.cpp)
add_executable(ex_5_22 ex_5/ex_5_22.cpp)
add_executable(ex_5_23 ex_5/ex_5_23.cpp)
add_executable(ex_5_24 ex_5/ex_5_24.cpp)
add_executable(ex_5_25 ex_5/ex_5_25.cpp)
add_executable(ex_5_26 ex_5/ex_5_26.cpp)
add_executable(ex_5_27 ex_5/ex_5_27.cpp)

add_executable(ex_6_01 ex_6/ex_6_01.cpp "ex_6/annexe.cpp" "ex_6/annexe.h")
add_executable(ex_6_04 ex_6/ex_6_04.cpp)
add_executable(ex_6_07 ex_6/ex_6_07.cpp)
add_executable(ex_6_08 ex_6/ex_6_08.cpp)
add_executable(ex_6_09 ex_6/ex_6_09.cpp "ex_6/annexe.cpp" "ex_6/annexe.h")
add_executable(ex_6_10 ex_6/ex_6_10.cpp)
add_executable(ex_6_13 ex_6/ex_6_13.cpp)
add_executable(ex_6_14 ex_6/ex_6_14.cpp)
add_executable(ex_6_15 ex_6/ex_6_15.cpp)